--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       - DEBUG=${DEBUG}
       - SECRET_KEY=${SECRET_KEY}
+      - KEY_ENCRYPTION=${KEY_ENCRYPTION}
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_DOCKER_PORT}
       - DB_USER=${DB_USER}
